fix form appearnce on ios

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,17 +17,18 @@
   display: flex;
 }
 
-body{
+body {
   background-color: black;
+  -webkit-appearance: none;
 }
 
-.title{
+.title {
   align-self: center;
   font-size: 80px;
-  padding:0;
+  padding: 0;
   margin: 0;
-  color:#e3bd3e;
-  font-family: "crackman",sans-serif;
+  color: #e3bd3e;
+  font-family: "crackman", sans-serif;
 }
 
 .board {
@@ -37,7 +38,7 @@ body{
   width: 500px;
   height: 500px;
   margin: 40px;
-  font-size:400px ;
+  font-size: 400px;
   &__cell {
     outline: #1232ef solid 1px;
     color: white;
@@ -53,14 +54,14 @@ body{
   width: fit-content;
   flex: 0 0 auto;
   border: none;
-  border-radius: .5em;
-  font-family: "emulogic",sans-serif;
+  border-radius: 0.5em;
+  font-family: "emulogic", sans-serif;
   font-size: 12px;
   color: #efca07;
   background-color: #ca8123;
-  outline:solid 3px #6f2f12;
+  outline: solid 3px #6f2f12;
   &:focus,
-  &:hover{
+  &:hover {
     background-color: white;
     color: #ca8123;
   }
@@ -76,21 +77,22 @@ body{
   background: rgba($color: black, $alpha: 0.9);
   border: #1232ef solid 1px;
   border-radius: 10px;
-  font-family: "emulogic",sans-serif;
+  font-family: "emulogic", sans-serif;
   color: white;
-  &__title{
+  &__title {
     text-align: center;
     text-decoration: underline;
     font-size: 24px;
-    padding: .5em;
+    padding: 0.5em;
   }
-  &__message{}
+  &__message {
+  }
   &__button-container {
-    gap:12px;
+    gap: 12px;
     justify-content: center;
     margin-top: 2em;
   }
-  &__mark-field{
+  &__mark-field {
     align-self: center;
     font-size: 3em;
   }
@@ -103,113 +105,109 @@ body{
   }
   &__player-form {
     padding: 6px 0;
-    gap:12px;
+    gap: 12px;
   }
   &__entry-box {
     width: 11em;
     // font-family: "emulogic",sans-serif;
     background: black;
-    border:none;
+    border: none;
     outline: solid red 1px;
     border-radius: 5px;
     // font-size: 16px;
-    color:white;
+    color: white;
   }
   &__set-name-button {
     margin-right: 2em;
   }
   &__name-plate {
     margin: 0 2em;
-    font-family: "emulogic",sans-serif;
-    color:white;
+    font-family: "emulogic", sans-serif;
+    color: white;
     &--active {
-      transition: transform .5s;
+      transition: transform 0.5s;
       transform: scale(1.5);
       color: red;
     }
   }
 }
 
-.menu{
-
-  &__form{
+.menu {
+  &__form {
     gap: 12px;
     text-align: left;
     text-decoration: 0;
   }
-  &__form-element{
+  &__form-element {
     display: flex;
     justify-content: space-between;
     gap: 2em;
   }
 }
 
-@media screen and (max-width: 600px){
-.title{
-  font-size: 40px;
-}
+@media screen and (max-width: 600px) {
+  .title {
+    font-size: 40px;
+  }
 
-.board {
-  width: 300px;
-  height: 300px;
-  margin: 20px;
-  font-size:200px ;
-}
+  .board {
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    font-size: 200px;
+  }
 
-.player-bar {
-  flex-direction: column;
-  &__player-form {
-    gap:8px;
+  .player-bar {
+    flex-direction: column;
+    &__player-form {
+      gap: 8px;
+    }
+    &__set-name-button {
+      margin-right: 2em;
+    }
+    &__button-field {
+      justify-content: center;
+    }
+    &__button-field .button {
+      padding: 2px 8px;
+    }
+    &__name-plate {
+      margin: 0 2em;
+    }
   }
-  &__set-name-button {
-    margin-right: 2em;
+  .button {
+    padding: 2px 3px;
+    font-size: 10px;
+    outline-width: 2px;
   }
-  &__button-field{
-    justify-content: center;
+  .window {
+    margin-top: 8.5em;
+    padding: 2.5em;
+    &__title {
+      font-size: 24px;
+      margin-top: -2em;
+      padding-bottom: 0.5em;
+    }
+    &__message {
+      font-size: 12px;
+    }
+    &__button-container {
+      gap: 6px;
+      margin-top: 0.5em;
+    }
+    &__mark-field {
+      align-self: center;
+      font-size: 3em;
+    }
   }
-  &__button-field .button{
-padding:2px 8px;
-  }
-  &__name-plate {
-    margin: 0 2em;
-  }
-}
-.button {
-  padding: 2px 3px;
-  font-size: 10px;
-  outline-width:2px;
-}
-.window {
-  margin-top: 8.5em;
-  padding: 2.5em;
-  &__title{
-    font-size: 24px;
-    margin-top: -2em;
-    padding-bottom: .5em;
-  }
-  &__message{
-    font-size: 12px;
-  }
-  &__button-container {
-    gap:6px;
-    margin-top: .5em;
-  }
-  &__mark-field{
-    align-self: center;
-    font-size: 3em;
-  }
-}
 
-.menu{
-
-  &__form{
-    gap: 6px;
+  .menu {
+    &__form {
+      gap: 6px;
+    }
+    &__form-element {
+      gap: 0.5em;
+      font-size: 12px;
+    }
   }
-  &__form-element{
-    gap: .5em;
-    font-size: 12px;
-  }
-}
-
-
 }
